[package]
description = "Rc and Arc alternatives that allow the smart pointer to refer to just a portion of a reference-counted allocation."
edition = "2021"
license-file = "LICENSE"
name = "maprc"
repository = "https://github.com/apparentlymart/rust-maprc"
version = "0.4.0"

[dependencies]

[features]
arc = []
default = ['arc', 'rc']
experimental_allocator_api = []
rc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
